# MANNI

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  House.csv  MANNI.cpp  MANNI.h  README.md
examples/: MultipleLinearRegression.csv
include/armadillo_bits/: config.hpp
include/linear-regression/: README.md  linear-regression.h
lib/OpenBLAS/lib/: libopenblas.exp
lib/OpenBLAS/lib/cmake/openblas/: OpenBLASConfig.cmake
lib/OpenBLAS/lib/pkgconfig/: openblas.pc
lib/linear-regression/: linear-regression.h
